--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -14,17 +14,46 @@ library(shiny)
 library(bayesrules)  # for the plotting functions
 ```
 
+
 ```{r}
+model <- readRDS("ordinal_model_1.rds") 
+```
+
+```{r}
+
 # Build the server
 server2 <- function(input, output) {
-  output$priorPdf <- renderPlot({
-    plot_beta(alpha = input$aPrior, beta = input$bPrior) + 
-      lims(y = c(0, input$ymax))
-  })
   
-  output$priorTable <- renderTable({
-    summarize_beta(alpha = input$aPrior, beta = input$bPrior)
+  
+
+  
+
+  output$resultTable <- renderTable({
+     # Prediciton from model
+  result <- table(posterior_predict(model,
+                              newdata = data.frame(
+    mean_income= input$mean_income,
+    unemployment_perc=input$unemployment_perc/10,
+    white_perc = input$white_perc/10,
+    school_count= input$school_count,
+    asian_perc = input$asian_perc/10,
+    latinx_perc = input$latinx_perc/10 ,
+    store_count= input$store_count
+    )))
+    
+  #   df <- as.data.frame(table(result)) %>% 
+  # mutate(Prediction = Freq/sum(Freq)*100) %>%
+  # mutate(Classification  = case_when(
+  #   result == 1 ~ 'Poor', 
+  #   result == 2 ~ 'Limited', 
+  #   result == 3 ~ 'Satisfactory', 
+  #   result == 4 ~ 'Excellent' )) %>% 
+  # relocate(Classification, .after = Prediction) %>% 
+  # dplyr::select(Classification,Prediction)
+    
+    result
   })
+
 }
 
 
@@ -32,17 +61,23 @@ server2 <- function(input, output) {
 ui2 <- fluidPage(
   sidebarLayout(
     sidebarPanel(
-      h4("Tune the Beta(a,b) prior:"), 
-      sliderInput("aPrior", "alpha", min = 0, max = 100, value = 1),
-      sliderInput("bPrior", "beta", min = 0, max = 100, value = 1),
-      h4("Specify the limit of the y-axis:"), 
-      sliderInput("ymax", "", min = 1, max = 40, value = 10)
+      h4("Demographic Information"), 
+      sliderInput("mean_income", "mean_income", min = 0, max = 30000, value = 10),
+      sliderInput("unemployment_perc", "unemployment_perc", min = 0, max = 100, value = 1),
+      h4("Population"), 
+      sliderInput("white_perc", "white_perc", min = 0, max = 100, value = 1),
+      sliderInput("asian_perc", "asian_perc", min = 0, max = 100, value = 1),
+      sliderInput("latinx_perc", "latinx_perc", min = 0, max = 100, value = 1),
+      h4("Store and School Count"), 
+      sliderInput("store_count", "store_count", min = 0, max = 250, value = 1),
+      sliderInput("school_count", "school_count", min = 0, max = 40, value = 1),
+      
     ),
     mainPanel(
-      h4("Plot of the prior pdf:"), 
-      plotOutput("priorPdf"),
+      # h4("Plot of the prior pdf:"), 
+      # plotOutput("priorPdf"),
       h4("Prior features:"), 
-      tableOutput("priorTable")
+      tableOutput("resultTable")
     )
   )
 )
