--- a/OrdinalModels.Rmd
+++ b/OrdinalModels.Rmd
@@ -78,7 +78,7 @@ my_prediction1 <- posterior_predict(
 
 ordinal_accuracy(my_prediction1,model_data1)
 
-result <- posterior_predict(
+pred <- posterior_predict(
   model1, 
   newdata = data.frame( 
     mean_income= 80000, 
@@ -88,17 +88,17 @@ result <- posterior_predict(
     asian_perc = 1.2, 
     latinx_perc =  3.3, 
     store_count= 320))
- df <- as.data.frame(table(result)) %>% 
-  mutate(Prediction = Freq/sum(Freq)*100) %>%
-  mutate(Classification  = case_when(
-    result == 1 ~ 'Poor', 
-    result == 2 ~ 'Limited', 
-    result == 3 ~ 'Satisfactory', 
-    result == 4 ~ 'Excellent' )) %>% 
-  relocate(Classification, .after = Prediction) %>% 
-  dplyr::select(Classification,Prediction)
+  df <- as.data.frame(pred) %>%
+    mutate(Classification  = case_when(
+    `1` == 1 ~ 'Poor',
+    `1` == 2 ~ 'Limited',
+    `1` == 3 ~ 'Satisfactory',
+    `1` == 4 ~ 'Excellent' )) %>%
+  dplyr::select(Classification)
     
-  
+    tab <- table(df) %>% sort(decreasing=TRUE)
+    names(dimnames(tab)) <- c("Classification")
+    tab
 
 ```
 
