--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -30,7 +30,7 @@ server2 <- function(input, output) {
 
   output$resultTable <- renderTable({
      # Prediciton from model
-  result <- table(posterior_predict(model,
+  pred <- posterior_predict(model,
                               newdata = data.frame(
     mean_income= input$mean_income,
     unemployment_perc=input$unemployment_perc/10,
@@ -39,7 +39,18 @@ server2 <- function(input, output) {
     asian_perc = input$asian_perc/10,
     latinx_perc = input$latinx_perc/10 ,
     store_count= input$store_count
-    )))
+    ))
+  df <- as.data.frame(pred) %>%
+    mutate(Classification  = case_when(
+    `1` == 1 ~ 'Poor',
+    `1` == 2 ~ 'Limited',
+    `1` == 3 ~ 'Satisfactory',
+    `1` == 4 ~ 'Excellent' )) %>%
+  dplyr::select(Classification)
+    
+    tab <- table(df) %>% sort(decreasing=TRUE) %>% prop.table()
+    names(dimnames(tab)) <- c("Transit_Accessibility")
+    tab
     
   #   df <- as.data.frame(table(result)) %>% 
   # mutate(Prediction = Freq/sum(Freq)*100) %>%
@@ -50,8 +61,6 @@ server2 <- function(input, output) {
   #   result == 4 ~ 'Excellent' )) %>% 
   # relocate(Classification, .after = Prediction) %>% 
   # dplyr::select(Classification,Prediction)
-    
-    result
   })
 
 }
@@ -62,21 +71,21 @@ ui2 <- fluidPage(
   sidebarLayout(
     sidebarPanel(
       h4("Demographic Information"), 
-      sliderInput("mean_income", "mean_income", min = 0, max = 30000, value = 10),
-      sliderInput("unemployment_perc", "unemployment_perc", min = 0, max = 100, value = 1),
+      sliderInput("mean_income", "Mean Income", min = 0, max = 300000, value = 10),
+      sliderInput("unemployment_perc", "% of Unemployment", min = 0, max = 100, value = 1),
       h4("Population"), 
-      sliderInput("white_perc", "white_perc", min = 0, max = 100, value = 1),
-      sliderInput("asian_perc", "asian_perc", min = 0, max = 100, value = 1),
-      sliderInput("latinx_perc", "latinx_perc", min = 0, max = 100, value = 1),
+      sliderInput("white_perc", "% of White", min = 0, max = 100, value = 1),
+      sliderInput("asian_perc", "% of Asian", min = 0, max = 100, value = 1),
+      sliderInput("latinx_perc", "% of Latinx", min = 0, max = 100, value = 1),
       h4("Store and School Count"), 
-      sliderInput("store_count", "store_count", min = 0, max = 250, value = 1),
-      sliderInput("school_count", "school_count", min = 0, max = 40, value = 1),
+      sliderInput("store_count", "Store Count", min = 0, max = 250, value = 1),
+      sliderInput("school_count", "School Count", min = 0, max = 40, value = 1),
       
     ),
     mainPanel(
       # h4("Plot of the prior pdf:"), 
       # plotOutput("priorPdf"),
-      h4("Prior features:"), 
+      h4("Model Predictions"), 
       tableOutput("resultTable")
     )
   )
