--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -12,6 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 library(shiny)
 library(bayesrules)  # for the plotting functions
+library(rstanarm)
+library(dplyr)
 ```
 
 
