--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -19,6 +19,7 @@ library(dplyr)
 
 ```{r}
 model <- readRDS("ordinal_model_1.rds") 
+modelNaive <- 
 ```
 
 ```{r}
@@ -30,20 +31,59 @@ server2 <- function(input, output) {
 
   
 
-  output$resultTable <- renderTable({
+  output$resultTableOrdinal <- renderTable({
      # Prediciton from model
   pred <- posterior_predict(model,
                               newdata = data.frame(
     total_pop = input$total_pop,
     mean_income= input$mean_income,
-    unemployment_perc=input$unemployment_perc/10,
-    below_poverty_perc = input$below_poverty_perc/10,
-    evictions_perc = input$evictions_perc/10,
-    white_perc = input$white_perc/10,
+    unemployment_perc=input$unemployment_perc,
+    below_poverty_perc = input$below_poverty_perc,
+    evictions_perc = input$evictions_perc,
+    white_perc = input$white_perc,
     school_count= input$school_count,
-    asian_perc = input$asian_perc/10,
-    black_perc = input$black_perc/10,
-    latinx_perc = input$latinx_perc/10,
+    asian_perc = input$asian_perc,
+    black_perc = input$black_perc,
+    latinx_perc = input$latinx_perc,
+    store_count= input$store_count
+    ))
+  df <- as.data.frame(pred) %>%
+    mutate(Classification  = case_when(
+    `1` == 1 ~ 'Poor',
+    `1` == 2 ~ 'Limited',
+    `1` == 3 ~ 'Satisfactory',
+    `1` == 4 ~ 'Excellent' )) %>%
+  dplyr::select(Classification)
+    
+    tab <- table(df) %>% sort(decreasing=TRUE) %>% prop.table()
+    names(dimnames(tab)) <- c("Transit_Accessibility")
+    tab
+    
+  #   df <- as.data.frame(table(result)) %>% 
+  # mutate(Prediction = Freq/sum(Freq)*100) %>%
+  # mutate(Classification  = case_when(
+  #   result == 1 ~ 'Poor', 
+  #   result == 2 ~ 'Limited', 
+  #   result == 3 ~ 'Satisfactory', 
+  #   result == 4 ~ 'Excellent' )) %>% 
+  # relocate(Classification, .after = Prediction) %>% 
+  # dplyr::select(Classification,Prediction)
+  })
+  
+  output$resultTableOrdinal2 <- renderTable({
+     # Prediciton from model
+  pred <- posterior_predict(model,
+                              newdata = data.frame(
+    total_pop = input$total_pop,
+    mean_income= input$mean_income,
+    unemployment_perc=input$unemployment_perc,
+    below_poverty_perc = input$below_poverty_perc,
+    evictions_perc = input$evictions_perc,
+    white_perc = input$white_perc,
+    school_count= input$school_count,
+    asian_perc = input$asian_perc,
+    black_perc = input$black_perc,
+    latinx_perc = input$latinx_perc,
     store_count= input$store_count
     ))
   df <- as.data.frame(pred) %>%
@@ -96,7 +136,8 @@ ui2 <- fluidPage(
       # h4("Plot of the prior pdf:"), 
       # plotOutput("priorPdf"),
       h4("Model Predictions"), 
-      tableOutput("resultTable")
+      tableOutput("resultTableOrdinal"),
+      tableOutput("resultTableOrdinal2")
     )
   )
 )
