--- a/OrdinalModels.Rmd
+++ b/OrdinalModels.Rmd
@@ -45,6 +45,7 @@ model1 <- stan_polr(transportation_desert_4num ~ total_pop + mean_income + unemp
 saveRDS(model1, 'ordinal_model_1.rds')
 
 model2 <- stan_polr(transportation_desert_4num ~ mean_income + below_poverty_perc + evictions_perc + school_count + store_count, data =nyc_clean2, prior=NULL,iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
+saveRDS(model2, 'ordinal_model_2.rds')
 
 model3 <- stan_polr(transportation_desert_4num ~white_perc + asian_perc + latinx_perc + black_perc, data =nyc_clean2, prior=NULL,iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
 ```
@@ -101,19 +102,13 @@ nyc_clean2 %>%
 ordinal_accuracy(my_prediction2,nyc_clean2)
 
 pred <- posterior_predict(
-  model1, 
+  model2, 
   newdata = data.frame( 
-    total_pop = 50000,
-    mean_income= 80000, 
-    unemployment_perc=0.3, 
+    mean_income= 100000, 
     evictions_perc = 2,
     below_poverty_perc = 2.1,
-    white_perc = 4, 
     school_count= 12, 
-    asian_perc = 1.2, 
-    black_perc = 10,
-    latinx_perc =  3.3, 
-    store_count= 320))
+    store_count= 50))
   df <- as.data.frame(pred) %>%
     mutate(Classification  = case_when(
     `1` == 1 ~ 'Poor',
