--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -18,8 +18,8 @@ library(dplyr)
 
 
 ```{r}
-model <- readRDS("ordinal_model_1.rds") 
-modelNaive <- 
+model <- readRDS("ordinal_model_2.rds") 
+modelNaive <- readRDS("naive_model_2.rds")
 ```
 
 ```{r}
@@ -35,16 +35,10 @@ server2 <- function(input, output) {
      # Prediciton from model
   pred <- posterior_predict(model,
                               newdata = data.frame(
-    total_pop = input$total_pop,
     mean_income= input$mean_income,
-    unemployment_perc=input$unemployment_perc,
     below_poverty_perc = input$below_poverty_perc,
     evictions_perc = input$evictions_perc,
-    white_perc = input$white_perc,
     school_count= input$school_count,
-    asian_perc = input$asian_perc,
-    black_perc = input$black_perc,
-    latinx_perc = input$latinx_perc,
     store_count= input$store_count
     ))
   df <- as.data.frame(pred) %>%
@@ -70,43 +64,21 @@ server2 <- function(input, output) {
   # dplyr::select(Classification,Prediction)
   })
   
-  output$resultTableOrdinal2 <- renderTable({
+  output$resultTableNaive <- renderTable({
      # Prediciton from model
-  pred <- posterior_predict(model,
-                              newdata = data.frame(
-    total_pop = input$total_pop,
+  pred <- predict(naive_model_2, 
+        newdata = data.frame( 
     mean_income= input$mean_income,
-    unemployment_perc=input$unemployment_perc,
     below_poverty_perc = input$below_poverty_perc,
     evictions_perc = input$evictions_perc,
-    white_perc = input$white_perc,
     school_count= input$school_count,
-    asian_perc = input$asian_perc,
-    black_perc = input$black_perc,
-    latinx_perc = input$latinx_perc,
-    store_count= input$store_count
-    ))
-  df <- as.data.frame(pred) %>%
-    mutate(Classification  = case_when(
-    `1` == 1 ~ 'Poor',
-    `1` == 2 ~ 'Limited',
-    `1` == 3 ~ 'Satisfactory',
-    `1` == 4 ~ 'Excellent' )) %>%
-  dplyr::select(Classification)
+    store_count= input$store_count)
+    , type = "raw")
+  pred
     
-    tab <- table(df) %>% sort(decreasing=TRUE) %>% prop.table()
-    names(dimnames(tab)) <- c("Transit_Accessibility")
-    tab
-    
-  #   df <- as.data.frame(table(result)) %>% 
-  # mutate(Prediction = Freq/sum(Freq)*100) %>%
-  # mutate(Classification  = case_when(
-  #   result == 1 ~ 'Poor', 
-  #   result == 2 ~ 'Limited', 
-  #   result == 3 ~ 'Satisfactory', 
-  #   result == 4 ~ 'Excellent' )) %>% 
-  # relocate(Classification, .after = Prediction) %>% 
-  # dplyr::select(Classification,Prediction)
+    # tab <- df %>% sort(decreasing=TRUE)
+    # names(dimnames(tab)) <- c("Transit_Accessibility")
+    # tab
   })
 
 }
@@ -117,16 +89,16 @@ ui2 <- fluidPage(
   sidebarLayout(
     sidebarPanel(
       h4("Demographic Information"), 
-      sliderInput("total_pop", "Total Population", min = 0, max = 100000, value = 10),
+      # sliderInput("total_pop", "Total Population", min = 0, max = 100000, value = 10),
       sliderInput("mean_income", "Mean Income", min = 0, max = 300000, value = 10),
-      sliderInput("unemployment_perc", "% of Unemployment", min = 0, max = 100, value = 1),
+      # sliderInput("unemployment_perc", "% of Unemployment", min = 0, max = 100, value = 1),
       sliderInput("below_poverty_perc", "% Below Poverty", min = 0, max = 100, value = 1),
       sliderInput("evictions_perc", "% of Evictions", min = 0, max=100, value =1),
       h4("Population"), 
-      sliderInput("white_perc", "% of White", min = 0, max = 100, value = 1),
-      sliderInput("asian_perc", "% of Asian", min = 0, max = 100, value = 1),
-      sliderInput("black_perc", "% of Black", min = 0, max = 100, value = 1),
-      sliderInput("latinx_perc", "% of Latinx", min = 0, max = 100, value = 1),
+      # sliderInput("white_perc", "% of White", min = 0, max = 100, value = 1),
+      # sliderInput("asian_perc", "% of Asian", min = 0, max = 100, value = 1),
+      # sliderInput("black_perc", "% of Black", min = 0, max = 100, value = 1),
+      # sliderInput("latinx_perc", "% of Latinx", min = 0, max = 100, value = 1),
       h4("Store and School Count"), 
       sliderInput("store_count", "Store Count", min = 0, max = 250, value = 1),
       sliderInput("school_count", "School Count", min = 0, max = 40, value = 1),
@@ -137,7 +109,7 @@ ui2 <- fluidPage(
       # plotOutput("priorPdf"),
       h4("Model Predictions"), 
       tableOutput("resultTableOrdinal"),
-      tableOutput("resultTableOrdinal2")
+      tableOutput("resultTableNaive")
     )
   )
 )
